--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,7 @@
     justify-content: center;
     flex-direction: column; */
     text-align: center;
-    /* visibility: hidden; */
+    visibility: hidden;
 }
 
 .sim-final-calculation{
